# matterdb

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml  README.md
derive/src/: db_traits.rs  lib.rs
matterdb/: Cargo.toml
matterdb/benches/: lib.rs
matterdb/benches/benchmarks/: encoding.rs  mod.rs  schema_patterns.rs  storage.rs
matterdb/examples/: manual_migration.rs  migration_with_helper.rs  migration_with_iter_loop.rs
matterdb/examples/migration/: mod.rs
matterdb/src/: db.rs  generic.rs  keys.rs  lazy.rs  lib.rs  macros.rs  migration.rs  options.rs  values.rs
matterdb/src/access/: extensions.rs  mod.rs
matterdb/src/backends/: rocksdb.rs  temporarydb.rs
matterdb/src/indexes/: entry.rs  group.rs  iter.rs  key_set.rs  list.rs  map.rs  mod.rs  sparse_list.rs
matterdb/src/migration/: persistent_iter.rs
matterdb/src/views/: address.rs  metadata.rs  mod.rs  system_schema.rs  tests.rs
matterdb/tests/: backup.rs  checkpoints.rs  components.rs  iter.rs  list.rs  map.rs  migration.rs  persistent_iter.rs  set.rs
matterdb/tests/common/: mod.rs
matterdb/tests/key/: mod.rs
matterdb/tests/work/: mod.rs
